// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthModal /> should login form match snapshots 1`] = `
<AuthModal
  activeForm="login"
  onModalClose={[MockFunction]}
  setActiveForm={[MockFunction]}
>
  <Modal
    classModifier="modal__auth"
    closeBtnOuter={false}
    isDark={true}
    onClose={[Function]}
  >
    <div
      className="modal_container__react modal__auth"
    >
      <div
        className="overlay overlay__dark"
        data-id="overlay"
        onClick={[Function]}
        role="dialog"
      />
      <div
        className="modal"
      >
        <div
          className="authentication"
        >
          <FormLogin
            activeForm="login"
            emailValue=""
            errorMessage=""
            extendedActiveForm={[Function]}
            isUserRemembered={true}
            onSubmit={[Function]}
            setFieldValue={[Function]}
          >
            <form
              onSubmit={[Function]}
            >
              <div
                className="wrapper"
              >
                <AuthForm
                  activeForm="login"
                  emailValue=""
                  errorMessage=""
                  firstNameValue=""
                  isUserRemembered={true}
                  lastNameValue=""
                  onSubmit={[Function]}
                  setFieldValue={[Function]}
                  subTitle="Enter your email address and password"
                  title="Sign in to your BuyaCar account"
                >
                  <h6
                    className="typo title"
                  >
                    Sign in to your BuyaCar account
                  </h6>
                  <span
                    className="typo typo__small subTitle"
                  >
                    Enter your email address and password
                  </span>
                  <div
                    className="row"
                  >
                    <div
                      className="email"
                    >
                      <InputEmail
                        autoFocus={true}
                        className="typo input"
                        customClasses="auth"
                        errorMessage="The email address you entered is not valid, please try again"
                        id="authEmail"
                        label={false}
                        name="email"
                        onChange={[Function]}
                        placeholder="Email Address"
                        required={false}
                        status=""
                        subTitle=""
                        useErrorBorder={true}
                        value=""
                      >
                        <Label
                          customClasses="auth"
                          name="email"
                          required={false}
                          status=""
                          title={false}
                          withSub={false}
                        >
                          <div
                            className="label auth"
                          >
                            <label
                              data-id={false}
                              htmlFor="email"
                            >
                              <span
                                className="title"
                                data-id="label-title"
                              />
                              <input
                                autoFocus={true}
                                className="typo input"
                                id="authEmail"
                                name="email"
                                onChange={[Function]}
                                placeholder="Email Address"
                                type="email"
                                value=""
                              />
                            </label>
                          </div>
                        </Label>
                      </InputEmail>
                    </div>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="password"
                    >
                      <InputPassword
                        className="typo input"
                        customClasses="auth"
                        id="userPassword"
                        label={false}
                        name="password"
                        onChange={[Function]}
                        required={false}
                        status=""
                        subTitle=""
                        type="password"
                        value=""
                      >
                        <Label
                          customClasses="auth"
                          name="password"
                          required={false}
                          status=""
                          title={false}
                          withSub={false}
                        >
                          <div
                            className="label auth"
                          >
                            <label
                              data-id={false}
                              htmlFor="password"
                            >
                              <span
                                className="title"
                                data-id="label-title"
                              />
                              <input
                                className="typo input"
                                data-id="password-input"
                                defaultValue=""
                                id="userPassword"
                                name="password"
                                onChange={[Function]}
                                placeholder="Enter your password"
                                type="password"
                              />
                            </label>
                          </div>
                        </Label>
                      </InputPassword>
                    </div>
                  </div>
                  <div
                    className="row row__largeBottomSpace"
                  >
                    <InputCheckbox
                      checked={true}
                      className="checkbox"
                      customClasses="auth"
                      id="authRememberMe"
                      label="Remember me"
                      name=""
                      onChange={[Function]}
                      status=""
                    >
                      <div
                        className="wrapper auth"
                      >
                        <input
                          checked={true}
                          className="checkbox"
                          id="authRememberMe"
                          name=""
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <Label
                          customClasses="auth"
                          name=""
                          status=""
                          title="Remember me"
                          withSub={false}
                        >
                          <div
                            className="label auth"
                          >
                            <label
                              data-id={false}
                              htmlFor=""
                            >
                              <span
                                className="title"
                                data-id="label-title"
                              >
                                Remember me
                              </span>
                            </label>
                          </div>
                        </Label>
                      </div>
                    </InputCheckbox>
                    <span
                      className="typo typo__small typo__pointer"
                      data-id="toggle-pass"
                      onClick={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      Show password
                    </span>
                  </div>
                  <div
                    className="row row__middleBottomSpace"
                  >
                    <Button
                      className="typo submit"
                      data-id="login"
                      disabled={false}
                      href=""
                      onClick={[Function]}
                      selected={false}
                      styleType="primary"
                      type="submit"
                    >
                      <button
                        className="buttonComponent primary typo submit"
                        data-id="login"
                        disabled={false}
                        href={null}
                        onClick={[Function]}
                        type="submit"
                      >
                        Login
                      </button>
                    </Button>
                  </div>
                </AuthForm>
                <div
                  className="row row__middleBottomSpace"
                >
                  <span
                    className="typo typo__small forgotPassword"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    Forgot password?
                  </span>
                </div>
                <p
                  className="typo typo__small link"
                >
                  <span>
                    Don’t have an account? 
                  </span>
                  <b
                    data-id="link"
                    onClick={[Function]}
                    role="dialog"
                  >
                    Sign up
                  </b>
                </p>
              </div>
            </form>
          </FormLogin>
        </div>
        <ModalCloseButton
          className="close_button"
          data-id="close-button"
          height="20"
          onClick={[Function]}
          viewBox="0 0 21 20"
          width="21"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="close_button"
            data-id="close-button"
            height="20"
            onClick={[Function]}
            viewBox="0 0 21 20"
            width="21"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(.95)"
            >
              <circle
                cx="10"
                cy="10"
                fill="#03d39b"
                fillOpacity=".776"
                r="10"
              />
              <path
                d="M13.53 6.06l-7.06 7.273m0-7.272l7.06 7.272"
                stroke="#000"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
              />
            </g>
          </svg>
        </ModalCloseButton>
      </div>
    </div>
  </Modal>
</AuthModal>
`;

exports[`<AuthModal /> should reset form match snapshots 1`] = `
<AuthModal
  activeForm="reset"
  onModalClose={[MockFunction]}
  setActiveForm={[MockFunction]}
>
  <Modal
    classModifier="modal__auth"
    closeBtnOuter={false}
    isDark={true}
    onClose={[Function]}
  >
    <div
      className="modal_container__react modal__auth"
    >
      <div
        className="overlay overlay__dark"
        data-id="overlay"
        onClick={[Function]}
        role="dialog"
      />
      <div
        className="modal"
      >
        <div
          className="authentication"
        >
          <FormReset
            emailValue=""
            errorMessage=""
            extendedActiveForm={[Function]}
            onSubmit={[Function]}
            setFieldValue={[Function]}
          >
            <form
              onSubmit={[Function]}
            >
              <div
                className="reset"
              >
                <h6
                  className="typo title"
                >
                  Reset password
                </h6>
                <span
                  className="typo typo__small subTitle"
                >
                  Enter the email address associated with your account, and we'll email you a link to reset your password.
                </span>
                <div
                  className="row"
                >
                  <div
                    className="email"
                  >
                    <InputEmail
                      autoFocus={true}
                      className="typo input"
                      customClasses="auth"
                      errorMessage="The email address you entered is not valid, please try again"
                      label=""
                      name="email"
                      onChange={[Function]}
                      placeholder="Email Address"
                      required={false}
                      status=""
                      subTitle=""
                      useErrorBorder={true}
                      value=""
                    >
                      <Label
                        customClasses="auth"
                        name="email"
                        required={false}
                        status=""
                        title=""
                        withSub={false}
                      >
                        <div
                          className="label auth"
                        >
                          <label
                            data-id={false}
                            htmlFor="email"
                          >
                            <span
                              className="title"
                              data-id="label-title"
                            />
                            <input
                              autoFocus={true}
                              className="typo input"
                              name="email"
                              onChange={[Function]}
                              placeholder="Email Address"
                              type="email"
                              value=""
                            />
                          </label>
                        </div>
                      </Label>
                    </InputEmail>
                  </div>
                </div>
                <div
                  className="action"
                >
                  <div
                    className="action__back"
                  >
                    <span
                      className="typo typo__small back"
                      id="authBack"
                      onClick={[Function]}
                      role="dialog"
                    >
                      Back to login
                    </span>
                  </div>
                  <div
                    className="row row__half row__withoutBottomSpace"
                  >
                    <Button
                      className="typo submit"
                      disabled={false}
                      href=""
                      onClick={[Function]}
                      selected={false}
                      styleType="primary"
                      type="submit"
                    >
                      <button
                        className="buttonComponent primary typo submit"
                        disabled={false}
                        href={null}
                        onClick={[Function]}
                        type="submit"
                      >
                        Send reset link
                      </button>
                    </Button>
                  </div>
                </div>
              </div>
            </form>
          </FormReset>
        </div>
        <ModalCloseButton
          className="close_button"
          data-id="close-button"
          height="20"
          onClick={[Function]}
          viewBox="0 0 21 20"
          width="21"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="close_button"
            data-id="close-button"
            height="20"
            onClick={[Function]}
            viewBox="0 0 21 20"
            width="21"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(.95)"
            >
              <circle
                cx="10"
                cy="10"
                fill="#03d39b"
                fillOpacity=".776"
                r="10"
              />
              <path
                d="M13.53 6.06l-7.06 7.273m0-7.272l7.06 7.272"
                stroke="#000"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
              />
            </g>
          </svg>
        </ModalCloseButton>
      </div>
    </div>
  </Modal>
</AuthModal>
`;

exports[`<AuthModal /> should resetSuccess form match snapshots 1`] = `
<AuthModal
  activeForm="resetSuccess"
  onModalClose={[MockFunction]}
  setActiveForm={[MockFunction]}
>
  <Modal
    classModifier="modal__auth"
    closeBtnOuter={false}
    isDark={true}
    onClose={[Function]}
  >
    <div
      className="modal_container__react modal__auth"
    >
      <div
        className="overlay overlay__dark"
        data-id="overlay"
        onClick={[Function]}
        role="dialog"
      />
      <div
        className="modal"
      >
        <div
          className="authentication"
        >
          <div
            className="row row__hugeVerticalSpace reset__success"
          >
            <h6
              className="typo title"
            >
              Your password reminder has been sent to you
            </h6>
            <div
              className="typo typo__small subTitle"
            >
              Please follow the instructions on your email
            </div>
          </div>
        </div>
        <ModalCloseButton
          className="close_button"
          data-id="close-button"
          height="20"
          onClick={[Function]}
          viewBox="0 0 21 20"
          width="21"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="close_button"
            data-id="close-button"
            height="20"
            onClick={[Function]}
            viewBox="0 0 21 20"
            width="21"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(.95)"
            >
              <circle
                cx="10"
                cy="10"
                fill="#03d39b"
                fillOpacity=".776"
                r="10"
              />
              <path
                d="M13.53 6.06l-7.06 7.273m0-7.272l7.06 7.272"
                stroke="#000"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
              />
            </g>
          </svg>
        </ModalCloseButton>
      </div>
    </div>
  </Modal>
</AuthModal>
`;

exports[`<AuthModal /> should sign-up form match snapshots 1`] = `
<AuthModal
  activeForm="signup"
  onModalClose={[MockFunction]}
  setActiveForm={[MockFunction]}
>
  <Modal
    classModifier="modal__auth"
    closeBtnOuter={false}
    isDark={true}
    onClose={[Function]}
  >
    <div
      className="modal_container__react modal__auth"
    >
      <div
        className="overlay overlay__dark"
        data-id="overlay"
        onClick={[Function]}
        role="dialog"
      />
      <div
        className="modal"
      >
        <div
          className="authentication"
        >
          <FormSignUp
            activeForm="signup"
            emailValue=""
            errorMessage=""
            extendedActiveForm={[Function]}
            firstNameValue=""
            isUnsubscribed={false}
            isUserRemembered={true}
            lastNameValue=""
            onSubmit={[Function]}
            setFieldValue={[Function]}
          >
            <form
              onSubmit={[Function]}
            >
              <div
                className="wrapper"
              >
                <AuthForm
                  activeForm="signup"
                  emailValue=""
                  errorMessage=""
                  firstNameValue=""
                  isUserRemembered={true}
                  lastNameValue=""
                  onSubmit={[Function]}
                  setFieldValue={[Function]}
                  subTitle="Enter your email address and password"
                  title="Create a BuyaCar account"
                >
                  <h6
                    className="typo title"
                  >
                    Create a BuyaCar account
                  </h6>
                  <span
                    className="typo typo__small subTitle"
                  >
                    Enter your email address and password
                  </span>
                  <div
                    className="row"
                  >
                    <div
                      className="firstName"
                    >
                      <InputText
                        className="typo input"
                        customClasses="auth"
                        errorMessage=""
                        id="firstName"
                        label=""
                        name="firstName"
                        onChange={[Function]}
                        placeholder="First Name"
                        required={false}
                        status=""
                        subTitle=""
                        value=""
                      >
                        <Label
                          customClasses="auth"
                          name="firstName"
                          required={false}
                          status=""
                          title=""
                          withSub={false}
                        >
                          <div
                            className="label auth"
                          >
                            <label
                              data-id={false}
                              htmlFor="firstName"
                            >
                              <span
                                className="title"
                                data-id="label-title"
                              />
                              <input
                                className="typo input"
                                id="firstName"
                                name="firstName"
                                onChange={[Function]}
                                placeholder="First Name"
                                type="text"
                                value=""
                              />
                            </label>
                          </div>
                        </Label>
                      </InputText>
                    </div>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="lastName"
                    >
                      <InputText
                        className="typo input"
                        customClasses="auth"
                        errorMessage=""
                        id="lastName"
                        label=""
                        name="lastName"
                        onChange={[Function]}
                        placeholder="Last Name"
                        required={false}
                        status=""
                        subTitle=""
                        value=""
                      >
                        <Label
                          customClasses="auth"
                          name="lastName"
                          required={false}
                          status=""
                          title=""
                          withSub={false}
                        >
                          <div
                            className="label auth"
                          >
                            <label
                              data-id={false}
                              htmlFor="lastName"
                            >
                              <span
                                className="title"
                                data-id="label-title"
                              />
                              <input
                                className="typo input"
                                id="lastName"
                                name="lastName"
                                onChange={[Function]}
                                placeholder="Last Name"
                                type="text"
                                value=""
                              />
                            </label>
                          </div>
                        </Label>
                      </InputText>
                    </div>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="email"
                    >
                      <InputEmail
                        autoFocus={true}
                        className="typo input"
                        customClasses="auth"
                        errorMessage="The email address you entered is not valid, please try again"
                        id="authEmail"
                        label={false}
                        name="email"
                        onChange={[Function]}
                        placeholder="Email Address"
                        required={false}
                        status=""
                        subTitle=""
                        useErrorBorder={true}
                        value=""
                      >
                        <Label
                          customClasses="auth"
                          name="email"
                          required={false}
                          status=""
                          title={false}
                          withSub={false}
                        >
                          <div
                            className="label auth"
                          >
                            <label
                              data-id={false}
                              htmlFor="email"
                            >
                              <span
                                className="title"
                                data-id="label-title"
                              />
                              <input
                                autoFocus={true}
                                className="typo input"
                                id="authEmail"
                                name="email"
                                onChange={[Function]}
                                placeholder="Email Address"
                                type="email"
                                value=""
                              />
                            </label>
                          </div>
                        </Label>
                      </InputEmail>
                    </div>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="password"
                    >
                      <InputPassword
                        className="typo input"
                        customClasses="auth"
                        id="userPassword"
                        label={false}
                        name="password"
                        onChange={[Function]}
                        required={false}
                        status=""
                        subTitle=""
                        type="password"
                        value=""
                      >
                        <Label
                          customClasses="auth"
                          name="password"
                          required={false}
                          status=""
                          title={false}
                          withSub={false}
                        >
                          <div
                            className="label auth"
                          >
                            <label
                              data-id={false}
                              htmlFor="password"
                            >
                              <span
                                className="title"
                                data-id="label-title"
                              />
                              <input
                                className="typo input"
                                data-id="password-input"
                                defaultValue=""
                                id="userPassword"
                                name="password"
                                onChange={[Function]}
                                placeholder="Enter your password"
                                type="password"
                              />
                            </label>
                          </div>
                        </Label>
                      </InputPassword>
                    </div>
                  </div>
                  <div
                    className="row row__largeBottomSpace"
                  >
                    <InputCheckbox
                      checked={true}
                      className="checkbox"
                      customClasses="auth"
                      id="authRememberMe"
                      label="Remember me"
                      name=""
                      onChange={[Function]}
                      status=""
                    >
                      <div
                        className="wrapper auth"
                      >
                        <input
                          checked={true}
                          className="checkbox"
                          id="authRememberMe"
                          name=""
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <Label
                          customClasses="auth"
                          name=""
                          status=""
                          title="Remember me"
                          withSub={false}
                        >
                          <div
                            className="label auth"
                          >
                            <label
                              data-id={false}
                              htmlFor=""
                            >
                              <span
                                className="title"
                                data-id="label-title"
                              >
                                Remember me
                              </span>
                            </label>
                          </div>
                        </Label>
                      </div>
                    </InputCheckbox>
                    <span
                      className="typo typo__small typo__pointer"
                      data-id="toggle-pass"
                      onClick={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      Show password
                    </span>
                  </div>
                  <div
                    className="row row__middleBottomSpace"
                  >
                    <Button
                      className="typo submit"
                      data-id="login"
                      disabled={false}
                      href=""
                      onClick={[Function]}
                      selected={false}
                      styleType="primary"
                      type="submit"
                    >
                      <button
                        className="buttonComponent primary typo submit"
                        data-id="login"
                        disabled={false}
                        href={null}
                        onClick={[Function]}
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </Button>
                  </div>
                </AuthForm>
                <p
                  className="typo typo__small link"
                >
                  <span>
                    Already have a BuyaCar account? 
                  </span>
                  <b
                    data-id="link"
                    onClick={[Function]}
                    role="dialog"
                  >
                    Login
                  </b>
                </p>
                <div
                  className="privacyNotice"
                >
                  <p>
                    Privacy Notice
                    <br />
                    We will use the details you have shared to manage your car purchase. You agree to the processing, storage, sharing and use of this information for the purpose of managing your car purchase as described in our
                    <a
                      className="privacyLinks"
                      href="https://www.autovia.co.uk/privacy-policy/#vehicle-purchase-or-enquiry"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                       Privacy Policy
                    </a>
                    .
                  </p>
                  <div
                    className="field_type_text__auth"
                  >
                    We believe that based on this purchase you may be interested in other related products and services we offer. As described in our
                    <a
                      className="privacyLinks"
                      href="https://www.autovia.co.uk/privacy-policy/#vehicle-purchase-or-enquiry"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                       Privacy Policy 
                    </a>
                    we will use the information you have shared to send you communications about such products and services. If you do not wish to receive these communications from us then please click here and you will be unsubscribed from this activity.
                    <InputCheckbox
                      checked={false}
                      className="checkbox checkbox__unsubscribe"
                      customClasses="sign_up"
                      label=""
                      name=""
                      onChange={[Function]}
                      status=""
                    >
                      <div
                        className="wrapper sign_up"
                      >
                        <input
                          checked={false}
                          className="checkbox checkbox__unsubscribe"
                          name=""
                          onChange={[Function]}
                          type="checkbox"
                        />
                      </div>
                    </InputCheckbox>
                  </div>
                  <p>
                    We includes BuyaCar, AutoExpress, Carbuyer, evo and other Autovia Group brands as
                    <a
                      className="privacyLinks"
                      href="https://www.autovia.co.uk/brands"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                       detailed here
                    </a>
                    .
                  </p>
                </div>
              </div>
            </form>
          </FormSignUp>
        </div>
        <ModalCloseButton
          className="close_button"
          data-id="close-button"
          height="20"
          onClick={[Function]}
          viewBox="0 0 21 20"
          width="21"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="close_button"
            data-id="close-button"
            height="20"
            onClick={[Function]}
            viewBox="0 0 21 20"
            width="21"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(.95)"
            >
              <circle
                cx="10"
                cy="10"
                fill="#03d39b"
                fillOpacity=".776"
                r="10"
              />
              <path
                d="M13.53 6.06l-7.06 7.273m0-7.272l7.06 7.272"
                stroke="#000"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
              />
            </g>
          </svg>
        </ModalCloseButton>
      </div>
    </div>
  </Modal>
</AuthModal>
`;
